--- a/index.html
+++ b/index.html
@@ -67,22 +67,22 @@
     <main>
         <section id="home">
             <h2>Home</h2>
-            <p>This is the home section of the website. You can add any welcome message or introduction here.</p>
+            <p>Welcome to this random website where you can do nothing</p>
         </section>
 
         <section id="about">
             <h2>About</h2>
-            <p>Here, you can provide some details about yourself, your business, or the purpose of the website.</p>
+            <p>its pretty cool right</p>
         </section>
 
         <section id="services">
             <h2>Services</h2>
-            <p>Describe the services you offer in this section. Add any relevant information about what you do.</p>
+            <p>i dont do anything</p>
         </section>
 
         <section id="contact">
             <h2>Contact</h2>
-            <p>Provide contact details or a form for visitors to get in touch with you.</p>
+            <p>im done now</p>
         </section>
     </main>
 
