--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                 <li><a href="chat.html">chat</a></li>
             </ul>
         </nav>
     </header>
@@ -21,7 +22,7 @@
     <main>
         <section>
             <h2>About This Website</h2>
-            <p>This is a simple website with multiple pages, built using HTML and CSS.</p>
+            <p>This is a simple website with multiple pages, built using HTML and CSS. I am the creator Gooperd. Like and follow me on vortex.   :)</p>
         </section>
     </main>
 
