--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     <main>
         <section>
             <h2>Our Story</h2>
-            <p>We started this website to showcase our work and provide helpful resources.</p>
+            <p>We started this website to showcase our work and provide helpful resources. I am a Vip on Vortex (dashboard.fluxus.org) and i am running out of Vip gold (plz get me some gold) </p>
         </section>
     </main>
 
