--- a/features.html
+++ b/features.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Features Page</title>
+    <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                 <li><a href="chat.html">chat</a></li>
+                <li><a href="features.html">features</a></li>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -64,11 +69,7 @@
     <div class="features-section">
         <h2>Our Awesome Features:</h2>
         <ul class="feature-list">
-            <li>Feature 1: User-friendly Interface</li>
-            <li>Feature 2: Fast and Secure Performance</li>
-            <li>Feature 3: Mobile and Desktop Compatibility</li>
-            <li>Feature 4: Real-time Updates</li>
-            <li>Feature 5: Easy Integration</li>
+
         </ul>
 
         <p> This is cool, check out this link:</p>
