--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
                 <li><a href="contact.html">Contact</a></li>
                  <li><a href="chat.html">chat</a></li>
                 <li><a href="features.html">features</a></li>
+                <li><a href="partners.html">Partners</a></li>
 
             </ul>
         </nav>
