--- a/features.html
+++ b/features.html
@@ -9,6 +9,7 @@
                 <li><a href="contact.html">Contact</a></li>
                  <li><a href="chat.html">chat</a></li>
                 <li><a href="features.html">features</a></li>
+                <li><a href="partners.html">Partners</a></li>
     <style>
         body {
             font-family: Arial, sans-serif;
