--- a/chat.html
+++ b/chat.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat App</title>
+    <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                 <li><a href="chat.html">chat</a></li>
+                <li><a href="features.html">features</a></li>
+                <li><a href="partners.html">Partners</a></li>
     <style>
         #chat-container {
             width: 400px;
